--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="room_name">Room name</string>
     <string name="add_room_btn">Add Room</string>
     <string name="placeholder">Loading</string>
+    <string name="btn_start_game">Start Game</string>
 </resources>
