--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="add_room_btn">Add Room</string>
     <string name="placeholder">Loading</string>
     <string name="btn_start_game">Start Game</string>
+    <string name="guess">Guess</string>
 </resources>
