Switch over when win by give up done. Working on sending image payload

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="placeholder">Loading</string>
     <string name="btn_start_game">Start Game</string>
     <string name="guess">Guess</string>
+    <string name="give_up">Give Up</string>
 </resources>
